Fix in properties to get rid of warnings during start program

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/shopdb
 spring.datasource.username = team_a
 spring.datasource.password=1234
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
